# urdf_ws

src/ex_urdf/: package.xml
src/ex_urdf/launch/: omo_r1.launch  unitree_go1.launch
src/ex_urdf/urdf/: omo_r1.urdf.xacro
src/test_pkg/: CMakeLists.txt  package.xml
src/test_pkg/src/: talker.cpp
