<?xml version="1.0"?>
<package format="2">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>The test_pkg package</description>

  <maintainer email="12170550@inha.edu">hogyun</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/hogyun2/test_ws.git</url>
  
  <author email="12170550@inha.edu">Hogyun Kim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roscpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  
  </export>
</package>
